# canihasit

./: .gitignore  README.md  pyproject.toml
canihasit/: __main__.py  cli.py  models.py  output.py  utils.py
canihasit/analyzers/: __init__.py  sudo.py  suid.py
canihasit/scanners/: __init__.py  operating_system.py  sudo.py  suid.py  user.py
wayup/: cli.py  models.py  output.py  utils.py
wayup/analyzers/: sudo.py  suid.py
wayup/scanners/: __init__.py  operating_system.py  sudo.py  suid.py  user.py
