[project]
name = "wayup"
version = "0.1.0"
description = "A privilege escalation detection tool for identifying potential security vulnerabilities on Linux systems"
readme = "README.md"
requires-python = ">=3.14"
authors = [
    { name = "nconklindev" }
]
license = { text = "MIT" }
keywords = [ "security", "pentesting", "privilege escalation", "linux" ]
dependencies = [
    "click>=8.3.0",
    "rich>=14.2.0",
]

[dependency-groups]
dev = ["pytest"]
lint = ["black"]

[project.scripts]
wayup = "wayup.cli:main"
